--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body 
 {
-    /*background: #f2ecda;*/
-    background:  #262626;
-
+    /*background: #f2ecda;
+    background:  #262626;*/
+    background: white;
 }
 
 h1
@@ -13,7 +13,7 @@ h1
 	font-size: 50px;
 	/*margin-top: 200px;*/
 	margin-left: 120px;
-	margin-top: 1px;
+	margin-top: 10px;
 	margin-bottom: 0.67em;
 
 }
@@ -30,22 +30,34 @@ h2
 	width: 500px;
 	height: 550px;
 	border-radius: 5px;
-	background: #cf655d;
+	border: 5px solid black;
+	/*background: #cf655d;*/
+	background: #3b5998;
+	/*background-image: linear-gradient(#3b5998);*/
 	margin: auto; /*
 	margin-left: 300px;*/
 	margin-top: 40px;
-	/*box-shadow: 10px 10px;*/
+	/*box-shadow: 10px 10px;
 	-moz-box-shadow:    0px 3px 5px 10px black;
   	-webkit-box-shadow: 0px 3px 5px 10px black;
-  	box-shadow:         0px 3px 5px 10px black;
+  	box-shadow:         0px 3px 5px 10px black;*/
   	font-family: 'Athiti', sans-serif;
+  	-webkit-box-shadow: -1px 2px 26px 13px rgba(0,0,0,0.75);
+	-moz-box-shadow: -1px 2px 26px 13px rgba(0,0,0,0.75);
+	box-shadow: -1px 2px 26px 13px rgba(0,0,0,0.75);
 
 }
 
 img
 {
-	width: 499px;
-  	border: 2px solid black;
+	margin-top: 20px;
+	margin-left: 120px;
+	width: 250px;
+  	border: 5px solid black;
+  	border-radius: 70%;
+  	-webkit-box-shadow: -1px 2px 26px 13px rgba(0,0,0,0.75);
+	-moz-box-shadow: -1px 2px 26px 13px rgba(0,0,0,0.75);
+	box-shadow: -1px 2px 26px 13px rgba(0,0,0,0.75);
 }
 
 .container
@@ -57,7 +69,7 @@ img
 {
 	/*background-color: transparent;*/
 	background: black;
-	color: #cf655d;
+	color: #c3c7d9;
 	border:none;
     border:solid 2px black;
     border-radius: 5px;
@@ -74,7 +86,6 @@ img
 	font-size: 20px;
 	cursor: pointer;
 	/*width: 13%;*/
-
 }
 
 .b2
@@ -101,13 +112,13 @@ img
 
 .btn:hover
 {
-	background: #cccccc;
+	/*background: #cccccc;*/
+	background: #c3c7d9;
 	color: black;
     border:solid 2px black;
     transition: 0.7s;
     border-style: double black;
     font-weight: bold;
-
 }
 
 
