changed bg color

--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@ h2
 	height: 550px;
 	border-radius: 5px;
 	border: 5px solid black;
-	background: #cf655d;
+	background: white;
+	/*background: #cf655d;*/
 	/*background: #3b5998;*/
 	/*background-image: linear-gradient(#3b5998);*/
 	margin: auto; /*
