--- a/style.css
+++ b/style.css
@@ -1,128 +1,42 @@
-body 
+body
 {
-    /*background: #f2ecda;
-    background:  #262626;*/
-    background: white;
+	background: white;
+}
+
+h1, h2, h3, h4
+{
+	color: #0e3d80;
+	/*color: black;*/
+	margin-left: 500px;
 }
 
 h1
 {	
-	color: black;
-	/*font-family: 'Libre Barcode 128 Text', cursive;*/
 	font-family: 'Bungee Shade', cursive;
-	font-size: 50px;
-	/*margin-top: 200px;*/
-	margin-left: 120px;
-	margin-top: 10px;
-	margin-bottom: 0.67em;
-
+	font-size: 48px;
+	margin-top: 120px;
+	font-size: bold;
 }
 
 h2
 {
-	font-family: 'Zilla Slab Highlight', cursive;
+	font-family: 'Thasadith', sans-serif;
+	font-size: 25px;
 	margin-top: -20px;
-  	margin-left: 120px;
 }
 
-.box
+h3
 {
-	width: 500px;
-	height: 550px;
-	border-radius: 5px;
-	border: 5px solid black;
-	background: white;
-	/*background: #cf655d;*/
-	/*background: #3b5998;*/
-	/*background-image: linear-gradient(#3b5998);*/
-	margin: auto; /*
-	margin-left: 300px;*/
-	margin-top: 40px;
-	/*box-shadow: 10px 10px;
-	-moz-box-shadow:    0px 3px 5px 10px black;
-  	-webkit-box-shadow: 0px 3px 5px 10px black;
-  	box-shadow:         0px 3px 5px 10px black;*/
-  	font-family: 'Athiti', sans-serif;
-  	-webkit-box-shadow: -1px 2px 26px 13px rgba(0,0,0,0.75);
-	-moz-box-shadow: -1px 2px 26px 13px rgba(0,0,0,0.75);
-	box-shadow: -1px 2px 26px 13px rgba(0,0,0,0.75);
-
+	font-family: 'Thasadith', sans-serif;
+	font-size: 25px;
+	margin-top: -5px;
 }
 
-img
+h4
 {
-	margin-top: 20px;
-	margin-left: 120px;
-	width: 250px;
-  	border: 5px solid black;
-  	border-radius: 70%;
-  	-webkit-box-shadow: -1px 2px 26px 13px rgba(0,0,0,0.75);
-	-moz-box-shadow: -1px 2px 26px 13px rgba(0,0,0,0.75);
-	box-shadow: -1px 2px 26px 13px rgba(0,0,0,0.75);
+	font-family: 'Bungee Shade', cursive;
+	font-size: 50px;
+	margin-top: -20px;
+	font-size: bold;
 }
-
-.container
-{
-	margin-top: 0px;
-}
-
-.btn
-{
-	/*background-color: transparent;*/
-	background: black;
-	color: #c3c7d9;
-	border:none;
-    border:solid 2px black;
-    border-radius: 5px;
-}
-
-.b1
-{
-	margin: 0;
-	padding: 0;
-	margin-left: 95px;
-	padding: 5px 17px;
-	font-family: 'Righteous', cursive;
-	font-weight: lighter;
-	font-size: 20px;
-	cursor: pointer;
-	/*width: 13%;*/
-}
-
-.b2
-{
-	margin-left: 0.5px;
-	padding: 5px 17px;
-	font-family: 'Righteous', cursive;
-	font-weight: lighter;
-	font-size: 20px;
-	cursor: pointer;
-
-}
-
-.b3
-{
-	margin-left: 0.5px;
-	padding: 5px 17px;
-	font-family: 'Righteous', cursive;
-	font-weight: lighter;
-	font-size: 20px;
-	cursor: pointer;
-
-}
-
-.btn:hover
-{
-	/*background: #cccccc;*/
-	background: #c3c7d9;
-	color: black;
-    border:solid 2px black;
-    transition: 0.7s;
-    border-style: double black;
-    font-weight: bold;
-}
-
-
-
-
 
