--- a/style.css
+++ b/style.css
@@ -9,26 +9,53 @@ h1, h2, h3, h4
 	margin-left: 150px;
 	font-family: 'Glegoo', serif;
 	font-weight: lighter;
-
 }
 
 h1
 {
-	/*font-family: 'Thasadith', sans-serif;*/
 	font-size: 70px;
 	margin-top: 120px;
 }
 
 h2
 {
-	/*font-family: 'Thasadith', sans-serif;*/
 	font-size: 20px;
 	margin-top: -40px;
 }
 
 h3
 {
-	/*font-family: 'Thasadith', sans-serif;*/
 	font-size: 20px;
 	margin-top: 10px;
+}
+
+.GitHover:hover
+{
+    text-decoration: underline #0e3d80;
+}
+
+.E_hover:hover
+{
+	text-decoration: underline;
+	text-decoration-color: #0e3d80;
+}
+
+.container
+{
+	animation: transitionIn 2.5s;
+}
+
+@keyframes transitionIn
+{
+	from
+	{
+		opacity: 0;
+		transform: rotateX(-15deg);
+	}
+
+	to
+	{
+		opacity: 1;
+		transform: rotateX(0);
+	}
 }
