--- a/style.css
+++ b/style.css
@@ -10,32 +10,38 @@ h1, h2, h3, h4
 	text-align: center;
 	font-family: 'Shadows Into Light', cursive;
 	font-family: 'Yanone Kaffeesatz', sans-serif;
+	font-family: 'Libre Caslon Text', serif;
+	font-family: 'Slabo 27px', serif;
+
+	font-size: 20px;
+
 	font-weight: lighter;
 }
 
 h1
 {
-
-	font-size: 35px;
-	margin-top: 150px;
+	margin-top: 200px;
 }
 
 h2
 {
 
-	font-size: 35px;
-	margin-top: -25px;
+	margin-top: -15px;
 }
 
 .row {
-  display: flex;
-  margin-left: 455px;
-  margin-top: -4px;
+	display: flex;
+	margin-left: 504px;
+	margin-top: 35px;
 }
 
 .column {
   flex: -9%;
   padding: 5px;
+}
+
+.column:hover {
+	opacity: 0.7;
 }
 
 .GitHover:hover
