--- a/style.css
+++ b/style.css
@@ -13,31 +13,55 @@ h1, h2, h3, h4
 	font-family: 'Libre Caslon Text', serif;
 	font-family: 'Slabo 27px', serif;
 
-	font-size: 20px;
+	/*font-size: 20px;*/
 
 	font-weight: lighter;
 }
 
 h1
 {
-	margin-top: 200px;
+	text-align: justify;
+	/*margin-top: 25px;*/
+	text-align: center;
+	font-family: 'Alegreya Sans', sans-serif;
+	font-size: 20px;
+	margin-bottom: 2px; 
+	
+
 }
 
 h2
 {
+	margin-top: 0px;
+	font-size: 20px;
+}
 
-	margin-top: -15px;
+h3, h4
+{
+	margin-top: -5px;
+	font-size: 20px;
+}
+
+h4 
+{
+	font-size: 15px;
+	margin-top: -8px;
 }
 
 .row {
-	display: flex;
-	margin-left: 504px;
-	margin-top: 35px;
+	width: 50%;
+	display: flex; 
+	margin-left: auto;
+  	margin-right: auto;
+	margin-top: 23px;
 }
 
 .column {
-  flex: -9%;
+ /* flex: -9%;*/
   padding: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 190%;
 }
 
 .column:hover {
