--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body
 {
 	background: white;
+	
 }
 
 h1, h2, h3, h4
@@ -12,40 +13,36 @@ h1, h2, h3, h4
 	font-family: 'Yanone Kaffeesatz', sans-serif;
 	font-family: 'Libre Caslon Text', serif;
 	font-family: 'Slabo 27px', serif;
-
-	/*font-size: 20px;*/
-
 	font-weight: lighter;
 }
 
 h1
 {
 	text-align: justify;
-	/*margin-top: 25px;*/
+	margin-top: 145px;
 	text-align: center;
-	font-family: 'Alegreya Sans', sans-serif;
-	font-size: 20px;
+	font-family: 'Shadows Into Light', cursive;
+	font-size: 50px;
+	font-weight: lighter;
 	margin-bottom: 2px; 
-	
-
 }
 
 h2
 {
-	margin-top: 0px;
+	margin-top: 10px;
 	font-size: 20px;
 }
 
 h3, h4
 {
-	margin-top: -5px;
+	margin-top: 35px;
 	font-size: 20px;
 }
 
 h4 
 {
 	font-size: 15px;
-	margin-top: -8px;
+	margin-top: 28px;
 }
 
 .row {
