--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body
 {
-	background: white;
-
+	background: linear-gradient(180deg, #000 60%, #fff 50%); 
+	background-repeat: no-repeat;
 }
 
 h1, h2, h3, h4
@@ -25,12 +25,14 @@ h1
 	font-size: 50px;
 	font-weight: lighter;
 	margin-bottom: 2px; 
+	color: white
 }
 
 h2
 {
 	margin-top: 10px;
 	font-size: 20px;
+	color: white
 }
 
 h3, h4
@@ -43,6 +45,14 @@ h4
 {
 	font-size: 15px;
 	margin-top: 28px;
+}
+
+h5 {
+	text-align: center;
+	font-family: 'Slabo 27px', serif;
+	margin-top: -5px;
+	font-size: 19px;
+	color: black;
 }
 
 .row {
