--- a/style.css
+++ b/style.css
@@ -1,97 +1,76 @@
+html {
+	margin: 0;
+	padding: 0;
+	
+}
 body {
-	/*
-	background: linear-gradient(180deg, #000 54%, #fff 50%); 
-	background-repeat: no-repeat;*/
-	background: white;
-	height: 100%
+	width: 95vw;
+	height: 95vh;
+	background: #1c1c1e;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-h1, h2, h3, h4, h5, h6 {
-	color: #0e3d80;
-	color: black;
-	text-align: center;
-	font-family: 'Shadows Into Light', cursive;
-	font-family: 'Yanone Kaffeesatz', sans-serif;
-	font-family: 'Libre Caslon Text', serif;
-	font-family: 'Slabo 27px', serif;
-	font-weight: lighter;
+p {
+	font-family: 'Lato', sans-serif;
+	color: aliceblue;
+	margin-bottom: 0;
+	font-weight: 100;
 }
 
-h1 {
-	text-align: justify;
-	margin-top: 85px;
-	text-align: center;
-	font-family: 'Shadows Into Light', cursive;
-	font-size: 50px;
-	font-weight: lighter;
-	margin-bottom: 2px; 
-	color: black;
+li {
+	text-align: left;
 }
 
-h2 {
-	margin-top: 10px;
-	font-size: 20px;
-	color: black;
+a {
+	text-decoration: none;
+	color: aliceblue;
+	font-weight: 400;
 }
 
-h5, h6 {
-	margin-top: -18px;
-	font-size: 19px;
-	color: black;
-}
-
-h3, h4 {
-	margin-top: 35px;
-	font-size: 20px;
-}
-
-h4 {
-	font-size: 15px;
-	margin-top: 28px;
-}
-
-h6 {
-	margin-top: 40px;
-	font-size: 22px;
-	font-family: 'Slabo 27px', serif;
-	font-weight: lighter;
-}
-
-.row {
-	transition: box-shadow .3s;
-    background: #fff;
-	width: 42%;
-	display: flex; 
-	margin-left: auto;
-  	margin-right: auto;
-	margin-top: 23px;
-}
-
-.column {
- /* flex: -9%;*/
-  padding: 2.5px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 19%;
-}
-
-.column:hover {
-	opacity: 0.7;
-}
-
-.GitHover:hover {
-    text-decoration: underline;
-    text-decoration-color: black;
-}
-
-.E_hover:hover {
+li:hover {
 	text-decoration: underline;
-	text-decoration-color: black;
+	/* text-decoration-style: dotted; */
+	cursor: pointer;
+	text-underline-position: under;
+	text-decoration-color: aliceblue;
 }
 
-.container {
-	animation: transitionIn 2.5s;
+.profile-container {
+	display: flex;
+	align-items: center;
+	padding: 0;
 }
+
+.about-me {
+	z-index: 1;
+	position: relative;
+	right: 2.5vw;
+	display: flex;
+	justify-content: flex-start;
+	flex-direction: column;
+}
+
+.pic {
+	margin-right: 2vw;
+}
+
+ul li{
+	display: inline;
+	padding: 0;
+	font-family: 'Lato', sans-serif;
+	color: aliceblue;
+}
+
+ul {
+	padding: 0;
+}
+
+li {
+	margin-right: 1vw;
+}
+
 
 @keyframes transitionIn {
 	from {
@@ -105,19 +84,38 @@ h6 {
 	}
 }
 
-#resume_icon {
-	border-radius: 7%;
-}
-
-#email_icon {
-	border-radius: 7%;
-}
-
-#phone_icon {
-	border-radius: 7%;
-}
-
-mark {
-  background-color: black;
-  color: white;
-}
+/* Dropdown Button */
+.dropbtn {
+	border: none;
+	font-weight: 400;
+	border: none;
+	background: none;
+	font-family: 'Lato', sans-serif;
+	color: aliceblue;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+	position: relative;
+	display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+	display: none;
+	position: absolute;
+	min-width: 14vw;
+	padding-top: 1vw;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+	color: aliceblue;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+  }
+  
+  .dropdown:hover .dropdown-content {display: block;}
