--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
 body {
 	width: 95vw;
 	height: 95vh;
-	background: #1c1c1e;
+	background: black;
 	display: flex;
 	justify-content: center;
 	align-items: center;
