--- a/style.css
+++ b/style.css
@@ -12,11 +12,19 @@ body {
 	align-items: center;
 }
 
+h1 {
+	font-family: 'Lato', sans-serif;
+	color: #dcdcde;
+	margin-bottom: 0;
+	margin-top: 0;
+	font-weight: 900;
+}
+
 p {
 	font-family: 'Lato', sans-serif;
 	color: #dcdcde;
 	margin-bottom: 0;
-	font-weight: 300;
+	font-weight: 400;
 }
 
 li {
@@ -49,6 +57,12 @@ li:hover {
 	display: flex;
 	justify-content: flex-start;
 	flex-direction: column;
+/*	border: 1.5px solid #dcdcde;
+	border-style: dashed;
+	border-top: none;
+	border-right: none;
+	border-bottom: none;
+	padding-left: 2.2vw;*/
 }
 
 .pic {
@@ -60,6 +74,7 @@ ul li{
 	padding: 0;
 	font-family: 'Lato', sans-serif;
 	color: aliceblue;
+	margin-bottom: 0;
 }
 
 ul {
@@ -70,14 +85,13 @@ li {
 	margin-right: 1vw;
 }
 
-@keyframes transitionIn {
-	from {
-		opacity: 0;
-		transform: rotateX(-15deg);
-	}
+.blink_me {
+  color: #dcdcde;
+  animation: blinker 1s linear infinite;
+}
 
-	to {
-		opacity: 1;
-		transform: rotateX(0);
-	}
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
 }
